--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "choices.js": "^9.0.1",
     "closest": "0.0.1",
     "jquery": "^3.4.1",
+    "mdb-ui-kit": "^4.4.0",
     "node-sass": "^6.0.1",
     "object-fit-images": "^3.2.4",
     "sass": "^1.43.5",
