--- a/package.json
+++ b/package.json
@@ -90,11 +90,12 @@
     "autosize": "^4.0.2",
     "baron": "^3.0.3",
     "bootstrap": "^5.2.0",
-    "choices.js": "^9.0.1",
+    "choices.js": "^9.1.0",
     "closest": "0.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "lazysizes": "^5.3.2",
+    "lodash.throttle": "^4.1.1",
     "mdb-ui-kit": "^4.4.0",
     "node-sass": "^6.0.1",
     "object-fit-images": "^3.2.4",
