--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "node-sass": "^6.0.1",
     "nouislider": "^15.6.1",
     "object-fit-images": "^3.2.4",
+    "rateyo": "^3.0.0-alpha.2",
     "sass": "^1.43.5",
     "save-dev": "0.0.1-security",
     "simple-scrollbar": "^0.4.0",
