--- a/package.json
+++ b/package.json
@@ -101,12 +101,14 @@
     "imask": "^6.4.3",
     "jquery": "^3.4.1",
     "lazysizes": "^5.3.2",
+    "lightgallery": "^2.7.0",
     "lodash.throttle": "^4.1.1",
     "mdb-ui-kit": "^4.4.0",
     "micromodal": "^0.4.10",
     "node-sass": "^6.0.1",
     "nouislider": "^15.6.1",
     "object-fit-images": "^3.2.4",
+    "overlayscrollbars": "^2.0.1",
     "rateyo": "^3.0.0-alpha.2",
     "sass": "^1.43.5",
     "save-dev": "0.0.1-security",
